src/snapshots/len__lexer__tests__ +2.snap
---
source: src/lexer.rs
expression: "(input, p.parse(input))"
---
(
    " +2",
    ParseResult {
        output: None,
        errs: [
            at 2..3,
        ],
    },
)
