src/snapshots/len__lexer__tests__arrow.snap
---
source: src/lexer.rs
expression: "(input.0, input.1, p.parse(input.1))"
---
(
    "arrow",
    "a=>b",
    ParseResult {
        output: Some(
            [
                Token {
                    kind: Ident(
                        "a",
                    ),
                    span: 0..1,
                },
                Token {
                    kind: Arrow,
                    span: 1..3,
                },
                Token {
                    kind: Ident(
                        "b",
                    ),
                    span: 3..4,
                },
            ],
        ),
        errs: [],
    },
)
