src/snapshots/len__lexer__tests__assign2.snap
---
source: src/lexer.rs
expression: "(input.0, input.1, p.parse(input.1))"
---
(
    "assign2",
    "a=b==c",
    ParseResult {
        output: Some(
            [
                Token {
                    kind: Ident(
                        "a",
                    ),
                    span: 0..1,
                },
                Token {
                    kind: Bind,
                    span: 1..2,
                },
                Token {
                    kind: Ident(
                        "b",
                    ),
                    span: 2..3,
                },
                Token {
                    kind: Symbol(
                        "==",
                    ),
                    span: 3..5,
                },
                Token {
                    kind: Ident(
                        "c",
                    ),
                    span: 5..6,
                },
            ],
        ),
        errs: [],
    },
)
