src/snapshots/len__lexer__tests__bad s.snap
---
source: src/lexer.rs
expression: "(input.0, input.1, p.parse(input.1))"
---
(
    "bad s",
    " \"foo ",
    ParseResult {
        output: None,
        errs: [
            at 6..6,
        ],
    },
)
