src/snapshots/len__lexer__tests__empty.snap
---
source: src/lexer.rs
expression: "(input.0, input.1, p.parse(input.1))"
---
(
    "empty",
    "",
    ParseResult {
        output: Some(
            [],
        ),
        errs: [],
    },
)
