src/snapshots/len__lexer__tests__lexer-2.snap
---
source: src/lexer.rs
expression: "lexer().parse(r#\"== !=\"#)"
---
ParseResult {
    output: Some(
        [
            Ident(
                "==",
            ),
            Ident(
                "!=",
            ),
        ],
    ),
    errs: [],
}
