src/snapshots/len__lexer__tests__lexer.snap
---
source: src/lexer.rs
expression: "lexer().parse(r#\"1 + 2 = 1 (\"hello\" = hello)\"#)"
---
ParseResult {
    output: Some(
        [
            Number(
                1,
            ),
            Ident(
                "+",
            ),
            Number(
                2,
            ),
            Ident(
                "=",
            ),
            Number(
                1,
            ),
            LeftParenthesis,
            String(
                "hello",
            ),
            Ident(
                "=",
            ),
            Ident(
                "hello",
            ),
            RightParenthesis,
        ],
    ),
    errs: [],
}
