src/snapshots/len__lexer__tests__symbol-2.snap
---
source: src/lexer.rs
expression: "(input, p.parse(input))"
---
(
    " + ",
    ParseResult {
        output: Some(
            [
                "+",
            ],
        ),
        errs: [],
    },
)
